clusters/dextek/apps/flux-system/flux-instance/app/webhook/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 404"]
spec:
  hostnames:
    - fluxhook.plexuz.xyz
  parentRefs:
    - name: gateway-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: webhook-receiver
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
